<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardElevation="0dp"
        app:strokeWidth="0dp"
        app:cardCornerRadius="0dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="5dp"
            android:paddingVertical="15dp">
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/wrap_number"
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:cardElevation="0dp"
                app:strokeWidth="0dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/logo"
                    android:gravity="center">
                    <TextView
                        android:id="@+id/number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_114"
                        android:textSize="20sp"
                        android:fontFamily="@font/poppins_bold"
                        android:textStyle="bold"
                        android:textColor="@color/indigo_800"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/latin_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/wrap_number"
                app:layout_constraintStart_toEndOf="@id/wrap_number"
                app:layout_constraintEnd_toStartOf="@id/name_meaning"
                android:text="@string/al_fatihah"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/name_meaning"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/pembukaan"
                app:layout_constraintBottom_toBottomOf="@id/latin_name"
                app:layout_constraintStart_toEndOf="@id/latin_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/latin_name" />

            <TextView
                android:id="@+id/verse_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/latin_name"
                app:layout_constraintStart_toEndOf="@id/wrap_number"
                android:text="@string/_7_ayat"/>

            <TextView
                android:id="@+id/disembarkation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/verse_count"
                app:layout_constraintStart_toEndOf="@id/wrap_number"
                android:text="@string/mekah"/>
            
            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name_meaning"
                android:layout_marginEnd="10dp"
                android:text="@string/al_fatihah_arabic"
                android:textSize="20sp"
                android:fontFamily="@font/poppins_bold"
                android:textStyle="bold"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>