<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardElevation="0dp"
        app:strokeWidth="0dp"
        app:cardCornerRadius="0dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="5dp"
            android:paddingVertical="15dp">
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/wrap_number"
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/arabic_text"
                app:cardElevation="0dp"
                app:strokeWidth="0dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/logo"
                    android:gravity="center">
                    <TextView
                        android:id="@+id/number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_114"
                        android:textSize="20sp"
                        android:fontFamily="@font/poppins_bold"
                        android:textStyle="bold"
                        android:textColor="@color/indigo_800"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/arabic_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/al_fatihah_arabic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/wrap_number"
                android:textSize="35sp"
                android:fontFamily="@font/poppins_bold"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/latin_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/arabic_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="10dp"
                android:text="@string/al_fatihah"
                android:textSize="17sp"
                android:layout_marginTop="20dp"
                android:textColor="@color/indigo_800"/>

            <TextView
                android:id="@+id/indonesian_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/latin_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="10dp"
                android:text="@string/al_fatihah"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/audio_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?attr/materialIconButtonStyle"
                app:layout_constraintTop_toBottomOf="@id/indonesian_text"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="10dp"
                app:icon="@drawable/ic_play"/>

            <Button
                android:id="@+id/interpretation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?attr/materialIconButtonStyle"
                app:layout_constraintTop_toTopOf="@id/audio_play"
                app:layout_constraintStart_toEndOf="@id/audio_play"
                app:layout_constraintBottom_toBottomOf="@id/audio_play"
                android:layout_marginStart="10dp"
                app:icon="@drawable/ic_interpretation"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>